--- a/src/app/pim/spot/pimjob.component.html
+++ b/src/app/pim/spot/pimjob.component.html
@@ -63,16 +63,15 @@
     <table class="table  table-hover table-sm">
       <thead class="page-body-thead">
         <tr>
-          <th>CF#</th>
+          <th>Job#</th>
           <th>DATE</th>
           
           <th>REGION</th>
           <th>STORE</th>
           <th>VENDOR</th>
 
-          <th>EXECUTIVE</th>
-          <th>STORE-CONTACT</th>
-          <th>STORE-TEL</th>
+          <th>REMARKS</th>
+
 
           <th>APPROVAL-STATUS</th>
           <th>BY</th>
@@ -98,9 +97,8 @@
           <td (click)="ActionHandler('EDIT',rec.spot_pkid)">{{rec.spot_store_name}}</td>
           <td (click)="ActionHandler('EDIT',rec.spot_pkid)">{{rec.spot_vendor_name}}</td>
 
-          <td (click)="ActionHandler('EDIT',rec.spot_pkid)">{{rec.spot_executive_name}}</td>
-          <td (click)="ActionHandler('EDIT',rec.spot_pkid)">{{rec.spot_store_contact_name}}</td>
-          <td (click)="ActionHandler('EDIT',rec.spot_pkid)">{{rec.spot_store_contact_tel}}</td>
+          <td (click)="ActionHandler('EDIT',rec.spot_pkid)">{{rec.spot_job_remarks}}</td>
+
 
 
           <td (click)="ActionHandler('EDIT',rec.spot_pkid)">{{rec.approved_status}}</td>
@@ -148,7 +146,7 @@
   <div class="row">
     <div class="col-sm-6  steelblue text-white font-weight-bold">
       <div class="form-group row">
-        <label class="col-12 col-form-label col-form-label-sm">STORE INFO</label>
+        <label class="col-12 col-form-label col-form-label-sm">JOB DETAILS</label>
       </div>
     </div>
   </div>
@@ -160,7 +158,7 @@
     <div class="col-sm-6 border">
 
       <div class="form-group row mt-1">
-        <label class="col-4 col-form-label col-form-label-sm">CF#</label>
+        <label class="col-4 col-form-label col-form-label-sm">Job#</label>
         <div class="col-8">
           <input type="text" class="form-control form-control-sm" [(ngModel)]="data.Record.spot_slno" disabled />
         </div>
@@ -197,60 +195,14 @@
       </div>
 
 
-
-      <div class="form-group row">
-        <label class="col-4 col-form-label col-form-label-sm">Store View</label>
-        <div class="col-8">
-          <InputFile [fileType]="''" [fileName]="data.Record.spot_store_view"
-            [serverFolder]="gs.getServerImageFolder(data.Record.spot_pkid, 'storeview')"
-            (fileNameChanged)="data.Record.spot_store_view=$event"
-            (fileChanged)="data.Record.spot_store_view_file=$event"
-            (fileUploaded)="data.Record.spot_store_view_file_uploaded=$event">
-          </InputFile>
-        </div>
-      </div>
-
-
-
       <div class="form-group row mt-1">
-        <label class="col-4 col-form-label col-form-label-sm">Executive Name</label>
+        <label class="col-4 col-form-label col-form-label-sm">Remarks</label>
         <div class="col-8">
-          <input type="text" class="form-control form-control-sm" [(ngModel)]="data.Record.spot_executive_name"
-            maxlength="100" />
+          <input type="text" class="form-control form-control-sm" [(ngModel)]="data.Record.spot_job_remarks"
+            maxlength="200" />
         </div>
       </div>
 
-      <div class="form-group row mt-1">
-        <label class="col-4 col-form-label col-form-label-sm">Store Contact Name</label>
-        <div class="col-8">
-          <input type="text" class="form-control form-control-sm" [(ngModel)]="data.Record.spot_store_contact_name"
-            maxlength="100" />
-        </div>
-      </div>
-
-      <div class="form-group row mt-1">
-        <label class="col-4 col-form-label col-form-label-sm">Store Contact Tel</label>
-        <div class="col-8">
-          <input type="text" class="form-control form-control-sm" [(ngModel)]="data.Record.spot_store_contact_tel"
-            maxlength="100" />
-        </div>
-      </div>
-
-
-
-
-
-      <div class="form-group row">
-        <label class="col-4 col-form-label col-form-label-sm">Installation Report</label>
-        <div class="col-8">
-          <InputFile [fileType]="''" [fileName]="data.Record.spot_installation_view"
-            [serverFolder]="gs.getServerImageFolder(data.Record.spot_pkid, 'installationview')"
-            (fileNameChanged)="data.Record.spot_installation_view=$event"
-            (fileChanged)="data.Record.spot_installation_view_file=$event"
-            (fileUploaded)="data.Record.spot_installation_view_file_uploaded=$event">
-          </InputFile>
-        </div>
-      </div>
 
     </div>
 
