--- a/src/app/pim/spot/pimspot.component.html
+++ b/src/app/pim/spot/pimspot.component.html
@@ -177,7 +177,7 @@
         <label class="col-4 col-form-label  col-form-label-sm">Store</label>
         <div class="col-8">
           <app-autocomplete2 [controlname]="'store'" [tabletype]="'STORE'" [subtype]=""
-            [parentid]="gs.globalVariables.user_pkid" [parentmandatory]="false" [displaycolumn]="'NAME'"
+            [parentid]="gs.globalVariables.user_pkid" [parentmandatory]="true" [displaycolumn]="'NAME'"
             [id]="data.Record.spot_store_id" [displaydata]="data.Record.spot_store_name"
             [disabled]=true
             (IdChanged)="data.Record.spot_store_id=$event" (NameChanged)="data.Record.spot_store_name=$event">
