--- a/src/app/pim/spot/pimspot.component.html
+++ b/src/app/pim/spot/pimspot.component.html
@@ -62,7 +62,7 @@
     <table class="table  table-hover table-sm">
       <thead class="page-body-thead">
         <tr>
-          <th>Job#</th>
+          <th>JOB#</th>
           <th>DATE</th>
           
           <th>REGION</th>
@@ -199,7 +199,7 @@
 
 
 
-      <div class="form-group row">
+      <div class="form-group row mt-1">
         <label class="col-4 col-form-label col-form-label-sm">Store View</label>
         <div class="col-8">
           <InputFile [fileType]="''" [fileName]="data.Record.spot_store_view"
