--- a/src/app/pim/spot/pimjob.component.html
+++ b/src/app/pim/spot/pimjob.component.html
@@ -63,7 +63,7 @@
     <table class="table  table-hover table-sm">
       <thead class="page-body-thead">
         <tr>
-          <th>Job#</th>
+          <th>JOB#</th>
           <th>DATE</th>
           
           <th>REGION</th>
