--- a/src/app/pim/recce-user/pimrecce.component.html
+++ b/src/app/pim/recce-user/pimrecce.component.html
@@ -1,12 +1,11 @@
 
 
-<div class="my-1">
 
-  <div class="row border mx-auto">
+  <div class="row border">
 
-    <div class="col-sm-12 border py-1">
+    <div class="col-sm-12">
 
-      <div class="form-group row">
+      <div class="form-group row my-2">
         <label class="col-2 col-form-label  col-form-label-sm">Recce</label>
         <div class="col-8">
           <app-autocomplete2 [controlname]="'recce'" [tabletype]="'RECCE USER'" [subtype]=""
@@ -29,4 +28,3 @@
   
 
 
-</div>
