--- a/src/app/shared/mailhistory/mailhistory.component.html
+++ b/src/app/shared/mailhistory/mailhistory.component.html
@@ -1,4 +1,4 @@
-<button (click)="showContent(content)" class="btn btn-primary btn-sm">{{_caption}}</button>
+<button (click)="showContent(content)" class="btn btn-primary btn-sm">{{caption}}</button>
 
 
 <ng-template #content let-modal>
@@ -49,7 +49,7 @@
 
   <div class="modal-footer">
     <div class="mx-auto">
-      <button (click)="getDataFromParent()" class="btn btn-primary mx-3" [disabled]="!bSave" >{{_sendCaption}}</button>
+      <button (click)="getDataFromParent()" class="btn btn-primary mx-3" [disabled]="!bSave" >{{sendCaption}}</button>
       <button type="button" ngbAutofocus class="btn btn-info" (click)="modal.close('Close click')">Close</button>
 
       <div class="loading-screen-icon" *ngIf="loading">
