--- a/src/app/shared/approval/approval.component.html
+++ b/src/app/shared/approval/approval.component.html
@@ -1,4 +1,4 @@
-<button (click)="showContent(content)" class="btn btn-primary btn-sm">Approval</button>
+<button (click)="showContent(content)" class="btn btn-primary btn-sm">{{title}}</button>
 
 
 <ng-template #content let-modal>
