--- a/src/app/pim/spot/pimspot.component.html
+++ b/src/app/pim/spot/pimspot.component.html
@@ -270,6 +270,16 @@
         </div>
       </div>
 
+
+      <div class="form-group row mt-1">
+        <label class="col-4 col-form-label col-form-label-sm">Status</label>
+        <div class="col-8">
+          <input type="text" class="form-control form-control-sm" [(ngModel)]="data.Record.approved_status" disabled
+            maxlength="200" />
+        </div>
+      </div>
+      
+
     </div>
 
 
