--- a/src/app/pim/spot/pimspotdet.component.html
+++ b/src/app/pim/spot/pimspotdet.component.html
@@ -118,6 +118,16 @@
         </div>
       </div>
 
+      <div class="form-group row mt-1">
+        <label class="col-4 col-form-label col-form-label-sm">Status</label>
+        <div class="col-8">
+          <input type="text" class="form-control form-control-sm" [(ngModel)]="Record.spotd_status" disabled
+            maxlength="200" />
+        </div>
+      </div>      
+
+      
+
     </div>
 
   </div>
