--- a/src/app/pim/spot/pimjobdet.component.html
+++ b/src/app/pim/spot/pimjobdet.component.html
@@ -124,9 +124,8 @@
 </div>
 
 
-
 <ng-template #content let-modal>
-  <div class="modal-header">
+  <div class="modal-header" >
     <h4 class="modal-title"></h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
@@ -134,14 +133,13 @@
   </div>
 
   <div class="modal-body mx-auto">
-    <p>
-      <img class="border" src="{{imageFileName}}" height="500" width="500">
-    </p>
-
+    <div>
+      <img class="border" src="{{imageFileName}}" width="100%" height="100%" >
+    </div>
   </div>
   <div class="modal-footer">
     <div class="mx-auto">
-      <button type="button" ngbAutofocus class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+      <a type="button" ngbAutofocus class="btn btn-light" (click)="modal.close('Close click')">Close</a>
     </div>
   </div>
 </ng-template>
